# m3u8-downloader

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  makefile
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  nightly.yml  release.yml  test.yml
data/: master-not-ending-in-newline-1.m3u8  master-playlist-with-blankline.m3u8  master-with-alternatives-2.m3u8  master-with-stream-inf-name.m3u8  masterplaylist.m3u8  media-not-ending-in-newline.m3u8  media-playlist-with-cues-1.m3u8  media-playlist-with-cues.m3u8  media-playlist-with-discontinuity.m3u8  media-playlist-without-segments.m3u8
src/: cli.rs  constants.rs  m3u8.rs  main.rs  opt.rs  request.rs  util.rs
