[package]
name = "m3u8-downloader"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0", features = ["stream", "trust-dns", "rustls-tls", "rustls-tls-native-roots"]}
clap = {version = "4", features = ["derive"]}
anyhow = "1"

# crate.io indicatif has bug
# indicatif = {git = "https://github.com/console-rs/indicatif", features = ["improved_unicode", "tokio"]}
indicatif = {version = "0", features = ["improved_unicode", "tokio"]}
console = "0"
futures = "0"
directories = "5"

# tempfile = "3"
# rand = "0"
# log = {version = "0"}
# env_logger = "0"
# lazy_static = "1"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
# options["none", "debuginfo", "symbols", true, false]
# the default is "none", true = "symbols", false = "none"
strip = true
