[package]
name = "m3u8-downloader"
version = "0.4.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0"
const_format = { version = "0" }
dialoguer = "0"
directories = "6"
futures = "0"
base64 = "0"

# crate.io indicatif has bug
# indicatif = {git = "https://github.com/console-rs/indicatif", features = ["improved_unicode", "tokio"]}
indicatif = { version = "0", features = ["improved_unicode", "tokio"] }
m3u8-rs = "6"
reqwest = { version = "0", default-features = false, features = [
  "charset",
  "macos-system-configuration",
  "http2",
  "stream",
  "trust-dns",
  "rustls-tls",
  "rustls-tls-native-roots",
  "socks",
  "gzip",
  "brotli",
  "zstd",
] }
tokio = { version = "1", features = ["full"] }
url = "2"

# tempfile = "3"
# rand = "0"
# log = {version = "0"}
# env_logger = "0"
# lazy_static = "1"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...' # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
# options["none", "debuginfo", "symbols", true, false]
# the default is "none", true = "symbols", false = "none"
strip = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
exit = "deny"
expect_used = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
todo = "deny"
unchecked_duration_subtraction = "deny"
unimplemented = "deny"
unreachable = "allow"
unwrap_used = "deny"
too_many_lines = "allow"
